Fixed images, main image on small screens, and changed skills icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,8 +165,9 @@ Gallery Styles
 
 .galleryItem img {
   max-width: 100%;
-  min-width: 320px;
-  min-height: 230px;
+  max-height: 100%;
+  min-height: 100%;
+  min-width: 100%;
   opacity: 1;
    -webkit-transition: all 0.2s ease-in; 
      -moz-transition: all  0.2s ease-in; 
@@ -381,6 +382,7 @@ Media Queries
     display: flex;
     flex-flow: column;
     justify-content: center;
+    min-height: 550px;
   }
 
   .headerPic {
